MGS-1205 BUG Fix long urls not wrapping in body

--- a/resources/scss/base/_base.links.scss
+++ b/resources/scss/base/_base.links.scss
@@ -5,6 +5,7 @@
 a {
   color: $color__link--primary;
   text-decoration: underline;
+  word-break: break-all;
 
   @include transition(color $transition-out-time);
 
